<resources>
    <string name="app_name">Flash Card App</string>
    <string name="retry_button">Retry</string>
    <string name="error_message">Error occurred. Please try again</string>
    <string name="type_label">Type:</string>
    <string name="flash_card_empty_message">No flash cards found</string>
    <string name="avatar">avatar image</string>

    <string name="summary_activity_title">Summary</string>

    <string name="summary_locale_count">View %1$d Locales</string>
    <string name="flash_card_count">View %1$d Flash Cards</string>

    <string name="locale_add">Add Locale</string>
    <string name="locale_hint">Type locale here</string>
    <string name="locale_title">Supported Locales:</string>

    <string name="add_card">Add Card</string>

    <string name="locale">Locale:</string>
    <string name="title">Title:</string>
    <string name="body">Body:</string>

    <string name="card_title_hint">Add card name</string>


    <string name="title_hint">Add title</string>
    <string name="body_hint">Add body</string>
    <string name="save_button">Save</string>

    <string name="flash_cards">Flash Cards</string>
    <string name="add_flash_card">Add Flash Card</string>
    <string name="add_locale">Add Locale</string>

</resources>