<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/input_locale"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="left"
        android:hint="@string/locale_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/add_locale"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input_locale"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/locale_add"/>

   <TextView
       android:id="@+id/locale_header"
       android:layout_margin="10dp"
       app:layout_constraintTop_toBottomOf="@id/add_locale"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:gravity="left"
       android:textStyle="bold"
       app:layout_constraintLeft_toLeftOf="parent"
       android:text="@string/locale_title"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/locale_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/locale_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>