<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    app:cardBackgroundColor="@color/cardview_light_background"
    app:cardCornerRadius="5dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/locale_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/locale"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/locale_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                tools:text="test" />

        </LinearLayout>

        <EditText
            android:id="@+id/title_text"
            android:hint="@string/title_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/body_text"
            android:layout_marginTop="10dp"
            android:hint="@string/body_hint"
            android:lines="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>